Add optional feature 'defmt' that enables logging
If the feature is enabled, derive defmt Format for all types.
For now, only log is trace after device initialization.

Signed-off-by: Witold Lipieta <witek103@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ readme = "README.md"
 
 [dependencies]
 embedded-hal-async = "1.0.0"
+defmt = { version = "0.3.6", optional = true}
+
+[features]
+defmt = ["dep:defmt"]
