--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ repository = "https://github.com/witek103/mpu-6500-rs"
 readme = "README.md"
 
 [dependencies]
-embedded-hal-async = "1.0.0"
+#embedded-hal-async = "1.0.0"
 defmt = { version = "0.3.6", optional = true}
+embedded-hal = "0.2.7"
 
 [features]
 defmt = ["dep:defmt"]
